# clinical-entity-recognition

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: bert.yaml  gliner.yaml  llm.yaml
data/: README.md
scripts/: eval_prompting_llm.sh  prepare_e3c.py  prepare_maccrobat.py  prepare_ncbi.py  prepare_quaero.py  train_eval_bert.sh  train_eval_gliner.sh  train_eval_llm.sh
src/cer/: __init__.py  prompts.py
src/cer/bert/: evaluate.py  prepare.py  train.py
src/cer/core/: interface.py
src/cer/core/data/: convert.py  prepare.py
src/cer/core/metrics/: ner_metrics.py
src/cer/gliner/: evaluate.py  train.py
src/cer/llm/: evaluate_prompting.py  evaluate_unsloth.py  train_unsloth.py
